[tool.poetry]
name = "organizers-bot"
version = "0.1.0"
description = "The management bot for the Organizers CTF discord"
authors = ["Robin Jadoul <~robin_jadoul/inbox@lists.sr.ht>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/0rganizers/the-organizer"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.1"
discord-py-slash-command = "^1.1.1"
aiobotocore = "^1.3.3"
gql = "^3.3.0"
websockets = "^10.3"

[tool.poetry.scripts]
organizers-bot = 'organizers_bot.main:main'


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
